add modal form for button

--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -175,7 +175,7 @@
                 GIA NHẬP AMAZON DỄ DÀNG
             </div>
             <div class=" wow fadeInRight" data-wow-delay="0.4s">
-                <button class="btn btn-shadow">
+                <button class="btn btn-shadow" data-toggle="modal" data-target="#modal-form">
                     ĐĂNG KÝ NGAY TẠI ĐÂY!
                 </button>
             </div>
@@ -211,7 +211,7 @@
         <div class="block2__right">
             <h2 class="block2__right--title wow fadeInUp" data-wow-delay="0.1s"> VÌ SAO BẠN NÊN GIA NHẬP BÁN HÀNG XUYÊN BIÊN GIỚI CÙNG AMAZON?</h2>
             <div class="wow fadeInUp" data-wow-delay="0.1s">
-                <button class="btn btn-blue-dark">đăng ký ngay tại đây</button>
+                <button class="btn btn-blue-dark" data-toggle="modal" data-target="#modal-form">đăng ký ngay tại đây</button>
             </div>
             <div class="block2__right--img wow fadeIn" data-wow-delay="0.2s">
                 <img src="./assets/images/block2-img.jpg" alt=" VÌ SAO BẠN NÊN GIA NHẬP BÁN HÀNG XUYÊN BIÊN GIỚI CÙNG AMAZON?">
@@ -238,7 +238,7 @@
                     <b>2. Doanh số của bên thứ ba trên Amazon đang tăng ở mức 52% một năm (so với 25% đối với doanh số của bên thứ nhất).</b>
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-blue-dark">đăng ký ngay tại đây</button>
+                    <button class="btn btn-blue-dark" data-toggle="modal" data-target="#modal-form">đăng ký ngay tại đây</button>
                 </div>
             </div>
         </div>
@@ -269,7 +269,7 @@
                 - Xây dựng thương hiệu trên Amazon.
             </div>
         </div>
-        <button class="btn btn-shadow">đăng ký ngay tại đây</button>
+        <button class="btn btn-shadow" data-toggle="modal" data-target="#modal-form">đăng ký ngay tại đây</button>
     </div>
 </section>
 <section class="block block5 sec05" id="sec05">
@@ -292,7 +292,12 @@
                     : Đăng ký thành công tài khoản trên Amazon Global Selling là bước khởi đầu để bạn phát triển doanh nghiệp xuyên biên giới, và nắm bắt cơ hội phát triển dài lâu.
                 </div>
             </div>
-            <button class="btn btn-blue-dark wow fadeInUp" data-wow-delay="0.3s">đăng ký ngay tại đây</button>
+            <button
+                data-toggle="modal"
+                data-target="#modal-form"
+                class="btn btn-blue-dark wow fadeInUp"
+                data-wow-delay="0.3s"
+            >đăng ký ngay tại đây</button>
         </div>
     </div>
 </section>
@@ -309,7 +314,7 @@
             <br>
             nhận ngay tư vấn 1-1
         </div>
-        <button class="btn btn-blue-dark">đăng ký ngay tại đây!</button>
+        <button data-toggle="modal" data-target="#modal-form" class="btn btn-blue-dark">đăng ký ngay tại đây!</button>
     </div>
 </section>
 <section class="block block7 sec07" id="sec07">
