--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -915,6 +915,9 @@ button {
             margin-bottom: 0;
         }
     }
+    .question--form {
+        max-height: 100%;
+    }
 }
 .modal-body {
     @media (max-width: 767px) {
